# webserv

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .iwyu.imp  400.html  CMakeLists.txt  Makefile  Makefile.old  TESTING_SETUP.md  check_iwyu.sh  compile_flags.txt  coverage.sh  fix_iwyu.sh  fix_iwyu_auto.sh  format.sh  generate_sources.sh  git_bisect.sh  reorder_includes.sh  run_tests.sh  safe_iwyu_fix.sh  setup.sh  sources.mk
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: clang-format.yml
config/: default.conf  prod.conf  valid_variations.conf
config/invalid_configs/: duplicate_directives.conf  edge_cases.conf  empty.conf  invalid_context.conf  invalid_values.conf  malformed_syntax.conf  minimal_valid.conf  missing_required.conf  test.conf  unsupported_directives.conf
docker/: Makefile  docker-compose.yml
docker/mariadb/: Dockerfile
docker/mariadb/conf/: my.cnf
docker/mariadb/tools/: docker-entrypoint.sh
docker/webserv/: Dockerfile  install-wp.sh
docker/webserv/conf/: default.conf  hosts
docker/webserv/github-commit-history/: github-commit-history.php
docs/: ALLOWED.md  ClassDiagram.mmd  Makefile.old  README.md  TODO  directives.md  moretodo
htdocs/YoupiBanane/: index.html
htdocs/error_pages/: 401.html  403.html  404.html  405.html  408.html  411.html  413.html  414.html  415.html  500.html  501.html  502.html  503.html  504.html
htdocs/site/: gallery.html  index.html  php.html  python.html
htdocs/site-1/: download.php  error_log.txt  upload.html  upload.php  upload.py  upload.sh
htdocs/site-1/tester/: test.html
htdocs/site-2/: 404.html  50x.html  index.html
htdocs/site-2/api/: health.json  info.json
htdocs/site-2/css/: style.css
htdocs/site-2/docs/: configuration.html
htdocs/site-2/examples/: README.md  sample.html  webserv.conf
htdocs/site-3/: index.html  index.php  index.py  index.sh  styles.css
htdocs/site-4/παράδειγμα/: index.html
htdocs/site/cgi-bin/: cookie.py  execute.py  session.py
htdocs/site/js/: php.js  python.js
htdocs/site_2/: index.html
htdocs/site_3/: index.html
scripts/: .iwyu.imp  check_iwyu.sh  coverage.sh  create_dist.sh  fix_iwyu_auto.sh  format.sh  generate_sources.sh  reorder_includes.sh  run_tests.sh  setup.sh  test_invalid_configs.sh
src/tests/: test_config.conf
src/tests/client/: test_client.cpp
src/tests/config/: test_config_manager.cpp  test_directives.cpp
src/tests/http/: test_http_headers.cpp  test_http_request.cpp  test_http_response.cpp
src/tests/log/: test_log.cpp
src/tests/router/: test_router.cpp
src/tests/server/: test_server.cpp
src/tests/socket/: test_socket.cpp
src/tests/utils/: test_file_utils.cpp  test_utils.cpp
src/webserv/: main.cpp  main.hpp
src/webserv/client/: Client.cpp  Client.hpp
src/webserv/config/: AConfig.cpp  AConfig.hpp  ConfigManager.cpp  ConfigManager.hpp  GlobalConfig.cpp  ServerConfig.cpp  ServerConfig.hpp
src/webserv/handler/: AHandler.cpp  AHandler.hpp  CgiHandler.cpp  CgiHandler.hpp  CgiProcess.cpp  DeleteHandler.cpp  DeleteHandler.hpp  ErrorHandler.cpp  FileHandler.cpp  MIMETypes.cpp  RedirectHandler.cpp  RedirectHandler.hpp  URI.cpp  URI.hpp  UploadHandler.cpp  UploadHandler.hpp
src/webserv/http/: HttpConstants.hpp  HttpHeaders.cpp  HttpResponse.cpp  HttpResponse.hpp  RequestValidator.cpp  RequestValidator.hpp
src/webserv/log/: Channel.cpp  FileChannel.cpp  FileChannel.hpp  Log.cpp  Log.hpp  StdoutChannel.cpp
src/webserv/router/: Router.cpp  Router.hpp
src/webserv/server/: Server.cpp  Server.hpp
src/webserv/socket/: ASocket.cpp  ASocket.hpp  CgiSocket.cpp  ClientSocket.cpp  ServerSocket.cpp  ServerSocket.hpp  TimerSocket.cpp
src/webserv/utils/: AutoIndex.cpp  FileUtils.cpp  FileUtils.hpp  utils.cpp  utils.hpp
static_site/: index.html
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/config/: test_directives.cpp
tests/handler/: test_handlers.cpp
tests/log/: test_log.cpp
tests/socket/: test_socket.cpp
webserv/: HttpConstants.hpp  main.cpp
webserv/ConfigManager/: ConfigManager.cpp  ConfigManager.hpp
webserv/client/: Client.cpp  Client.hpp
webserv/config/: AConfig.cpp  AConfig.hpp  ConfigManager.cpp  ConfigManager.hpp  GlobalConfig.cpp  GlobalConfig.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerConfig.cpp  ServerConfig.hpp  utils.cpp  utils.hpp
webserv/config/config_validator/: AValidationRule.cpp  AValidationRule.hpp  AllowedValuesRule.cpp  AllowedValuesRule.hpp  ConfigValidator.cpp  ConfigValidator.hpp  IValidationRule.hpp  PortValidationRule.cpp  PortValidationRule.hpp  RequiredDirectiveRule.cpp  RequiredDirectiveRule.hpp  ValidationEngine.cpp  ValidationEngine.hpp  (+2 more)
webserv/handler/: AHandler.cpp  AHandler.hpp  CgiEnvironment.cpp  CgiEnvironment.hpp  CgiHandler.cpp  CgiHandler.hpp  CgiHandler2.cpp2  CgiProcess.cpp  CgiProcess.hpp  DeleteHandler.cpp  DeleteHandler.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Errorhandler.cpp  FileHandler.cpp  FileHandler.hpp  MIMETypes.cpp  MIMETypes.hpp  RedirectHandler.cpp  RedirectHandler.hpp  URI.cpp  URI.hpp  URIParser.cpp  URIParser.hpp  UploadHandler.cpp  UploadHandler.hpp
webserv/http/: HttpConstants.cpp  HttpConstants.hpp  HttpHeaders.cpp  HttpHeaders.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  RequestValidator.cpp  RequestValidator.hpp
webserv/log/: Channel.cpp  Channel.hpp  Channnel.cpp  FileChannel.cpp  FileChannel.hpp  Log.cpp  Log.hpp  LogLevel.hpp  StdoutChannel.cpp  StdoutChannel.hpp
webserv/mymodule/: MyModule.cpp  MyModule.hpp
webserv/router/: Router.cpp  Router.hpp
webserv/server/: Client.cpp  Server.cpp  Server.hpp
webserv/socket/: ASocket.cpp  ASocket.hpp  CGISocket.cpp  CGISocket.hpp  CgiSocket.cpp  CgiSocket.hpp  ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  TimerSocket.cpp  TimerSocket.hpp
webserv/utils/: AutoIndex.cpp  AutoIndex.hpp  FileUtils.cpp  FileUtils.hpp  utils.cpp  utils.hpp
www/api/: users.json
www/docs/: getting-started.html
www/examples/: test.txt
www/js/: script.js
(+95 files in other folders)
